--- a/backend/pre-server-nodejs/package.json
+++ b/backend/pre-server-nodejs/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "python-shell": "^3.0.1",
     "shelljs": "^0.8.5"
   },
